kustomize/bases/ai/openwebui/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openwebui
  labels:
    app.kubernetes.io/name: openwebui
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: ai
    app.kubernetes.io/instance: ai-openwebui
    app.kubernetes.io/version: main
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: openwebui
    app.kubernetes.io/instance: ai-openwebui
