kustomize/bases/ai/openwebui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openwebui
  # These are not needed by considered a good practice
  labels:
    app.kubernetes.io/name: openwebui
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: ai
    app.kubernetes.io/instance: ai-openwebui
    app.kubernetes.io/version: main
  annotations:
    # Use only 80 and 443 entrypoint
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  rules:
    - host: openwebui.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openwebui
                port:
                  number: 8080
